--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-flash": "0.0.2",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
+    "mailer": "^0.6.7",
     "method-override": "^3.0.0",
     "mysql": "^2.17.1",
     "passport": "^0.4.0",
